[gd_scene load_steps=10 format=3 uid="uid://b18wukitqapui"]

[ext_resource type="Script" uid="uid://ctwheq35g6kju" path="res://scenes/test_head.gd" id="1_b71k6"]
[ext_resource type="PackedScene" uid="uid://4uoj5ad36imb" path="res://scenes/assets/head_normal.tscn" id="1_vgiwf"]
[ext_resource type="PackedScene" uid="uid://dh4udgva01m50" path="res://scenes/assets/head_gibbed.tscn" id="2_b71k6"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_b71k6"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_qaig8"]
sky_material = SubResource("ProceduralSkyMaterial_b71k6")

[sub_resource type="Environment" id="Environment_qbkga"]
background_mode = 2
sky = SubResource("Sky_qaig8")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_b71k6"]
shading_mode = 0
albedo_color = Color(0.218511, 0.0118776, 0.0389988, 1)
billboard_mode = 2

[sub_resource type="QuadMesh" id="QuadMesh_qaig8"]
material = SubResource("StandardMaterial3D_b71k6")
size = Vector2(0.1, 0.1)

[sub_resource type="Gradient" id="Gradient_85gk1"]
offsets = PackedFloat32Array(0, 0.478431, 1)
colors = PackedColorArray(0.509953, 0.0764134, 0.107858, 1, 0.841454, 0.0936115, 0.300024, 1, 0.561907, 0, 0.109822, 1)

[node name="TestHead" type="Node3D"]
script = ExtResource("1_b71k6")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_qbkga")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="head_normal" parent="." instance=ExtResource("1_vgiwf")]
visible = false

[node name="head_gibbed" parent="." instance=ExtResource("2_b71k6")]
visible = false

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.62942, -0.209842, 0.748196, -0.0959536, 0.934491, 0.342812, -0.771118, -0.287565, 0.568052, 3.41219, 2.36327, 1.82462)

[node name="BloodParticles" type="CPUParticles3D" parent="."]
emitting = false
amount = 300
lifetime = 2.0
one_shot = true
preprocess = 0.2
explosiveness = 1.0
randomness = 0.2
mesh = SubResource("QuadMesh_qaig8")
direction = Vector3(0, 1, 0)
spread = 30.0
gravity = Vector3(0, -10, 0)
initial_velocity_min = 3.0
initial_velocity_max = 8.0
color = Color(0.462677, 0, 0.113106, 1)
color_ramp = SubResource("Gradient_85gk1")
